[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Spider Purp.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/purp.gd" type="Script" id=2]
[ext_resource path="res://assets/Spider Purp 3.png" type="Texture" id=3]
[ext_resource path="res://assets/Spider Purp 1.png" type="Texture" id=4]
[ext_resource path="res://assets/Spider Purp 2.png" type="Texture" id=5]
[ext_resource path="res://assets/my-back_mLIbOp0.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/Among Us death 3.mp3" type="AudioStream" id=7]
[ext_resource path="res://src/AutoLoad/AudioManager.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "PurpRun",
"speed": 18.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "RUn"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 35.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 36 )

[sub_resource type="GDScript" id=5]
script/source = "extends Node

var num_players = 8
var bus = \"master\"

var available = []  # The available players.
var queue = []  # The queue of sounds to play.


func _ready():
	# Create the pool of AudioStreamPlayer nodes.
	for i in num_players:
		var p = AudioStreamPlayer.new()
		add_child(p)
		available.append(p)
		p.connect(\"finished\", self, \"_on_stream_finished\", [p])
		p.bus = bus


func _on_stream_finished(stream):
	# When finished playing a stream, make the player available again.
	available.append(stream)


func play(sound_path):
	queue.append(sound_path)


func _process(delta):
	# Play a queued sound if any players are available.
	if not queue.empty() and not available.empty():
		available[0].stream = load(queue.pop_front())
		available[0].play()
		available.pop_front()

"

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -38 )
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 500, 1400 )
headshot_impulse = 1600.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -100000
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="SpiderPurpAni" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 2.38419e-07, 0 )
scale = Vector2( -0.119, 0.093 )
frames = SubResource( 3 )
animation = "PurpRun"
frame = 11
playing = true

[node name="SpiderPurp" type="Sprite" parent="."]
position = Vector2( 1.5, 2.29686 )
scale = Vector2( -0.119, 0.093 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RUn = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.027451, 0, 0.870588, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
script = SubResource( 5 )

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
